--- a/index.html
+++ b/index.html
@@ -1,35 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Run, Rudolph, Run ! </title>
-    <meta name="description" content="Run, Rudolph, Run! - a quick reindeer dice game with fun and excitement for all ages.">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Run, Rudolph, Run !</title>
+    <meta name="description" content="Run, Rudolph, Run! - a quick reindeer dice game with fun and excitement for all ages." />
 
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-</head>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-<body>
-    <header class="container">
-        <h1>Run, Rudolph, Run !</h1>
-        <p>
-            Everyone's dream comes true, - to lead Santa's sleigh. 
-            The only problem? You must beat Rudolph through the scary, dark forest to win the red nose. 
-            Beware: Rudolph is fast and far more experienced than most. 
-            Meet the challenge, beat Rudolph, and help Santa Klaus.
-        </p>    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+
+  <body class="bg-light">
+    <!-- Top bar -->
+    <header class="container py-3">
+      <div class="topbar-box d-flex align-items-center justify-content-between px-3 py-2">
+        <button id="audioToggleBtn" type="button" class="btn btn-sm btn-secondary">🔇 AUDIO OFF</button>
+
+        <div class="w-100 text-center fw-semibold">Run, Rudolph, Run !</div>
+
+        <button
+          id="settingsBtn"
+          type="button"
+          class="btn btn-link p-0 text-dark text-decoration-none ms-2"
+          data-bs-toggle="modal"
+          data-bs-target="#settingsModal"
+          aria-label="Open settings"
+        >
+          ☰
+        </button>
+      </div>
     </header>
 
-    <main>
-        <section class="game-intro">
-            <h2>Welcome to Run, Rudolph, Run!</h2>
-            <p>Get started by picking which reindeer is fit enough to compete against Rudolph.</p>   
-            <p>Roll the dice, higher the number, and get faster through the dark forrest and earn your place at the front of the sleigh.</p> 
-            <p>First to the finish line wins the red nose and the lead position on Santa's sleigh!</p>
-        </section>
-    </main>
-    
-    <script type="module" src="./assets/js/script.js"></script>
+    <!-- Main content -->
+    <main class="container pb-4">
+      <!-- Screen: Start -->
+      <section id="screenStart" class="d-block">
+        <div class="hero-box mb-3 p-3">
+          <div class="hero-content">
+            <div class="hero-text">
+              <h1>Run, Rudolph, Run !</h1>
+              <p>
+                Everyone's dream comes true, - to lead Santa's sleigh. The only problem? You must beat Rudolph through the scary,
+                dark forest to win the red nose. Beware: Rudolph is fast and far more experienced than most. Meet the challenge,
+                beat Rudolph, and help Santa Klaus.
+              </p>
+            </div>
+            <div class="hero-image">
+              <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="rudolph-img" />
+            </div>
+          </div>
+        </div>
 
-</body>
+        <div class="intro-spotify-wrapper mb-4">
+          <div class="game-intro px-3">
+            <h2>Welcome to Run, Rudolph, Run!</h2>
+            <p>Get started by picking which reindeer is fit enough to compete against Rudolph.</p>
+            <p>
+              Roll the dice, higher the number, and get faster through the dark forrest and earn your place at the front of the
+              sleigh.
+            </p>
+            <p>First to the finish line wins the red nose and the lead position on Santa's sleigh!</p>
+          </div>
+
+          <div class="spotify-player">
+            <iframe
+              id="spotifyPlayer"
+              data-testid="embed-iframe"
+              class="spotify-embed"
+              src="https://open.spotify.com/embed/track/2pnPe4pJtq7689i5ydzvJJ?utm_source=generator&autoplay=true"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+
+        <div class="reindeer-grid">
+          <div class="reindeer-row">
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Dasher">
+              <img src="assets/images/reindeer/dasher.png" alt="Dasher" class="reindeer-img" />
+              <span class="reindeer-name">Dasher</span>
+            </button>
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Dancer">
+              <img src="assets/images/reindeer/dancer.png" alt="Dancer" class="reindeer-img" />
+              <span class="reindeer-name">Dancer</span>
+            </button>
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Prancer">
+              <img src="assets/images/reindeer/prancer.png" alt="Prancer" class="reindeer-img" />
+              <span class="reindeer-name">Prancer</span>
+            </button>
+          </div>
+
+          <div class="reindeer-row">
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Vixen">
+              <img src="assets/images/reindeer/vixen.png" alt="Vixen" class="reindeer-img" />
+              <span class="reindeer-name">Vixen</span>
+            </button>
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Comet">
+              <img src="assets/images/reindeer/comet.png" alt="Comet" class="reindeer-img" />
+              <span class="reindeer-name">Comet</span>
+            </button>
+          </div>
+
+          <div class="reindeer-row">
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Cupid">
+              <img src="assets/images/reindeer/cupid.png" alt="Cupid" class="reindeer-img" />
+              <span class="reindeer-name">Cupid</span>
+            </button>
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Donner">
+              <img src="assets/images/reindeer/donner.png" alt="Donner" class="reindeer-img" />
+              <span class="reindeer-name">Donner</span>
+            </button>
+            <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Blitzen">
+              <img src="assets/images/reindeer/blitzen.png" alt="Blitzen" class="reindeer-img" />
+              <span class="reindeer-name">Blitzen</span>
+            </button>
+          </div>
+        </div>
+
+        <div class="text-center mt-5">
+          <button id="startGameBtn" class="btn btn-dark btn-lg game-btn" type="button" disabled>Start Game</button>
+        </div>
+      </section>
+
+      <!-- Screen: Game -->
+      <section id="screenGame" class="d-none">
+        <div class="board-box p-4 mb-4">
+          <div class="text-center mb-4">
+            <div class="player-info mb-3">
+              <span class="player-label">Playing as:</span>
+              <strong id="selectedName" class="player-name">-</strong>
+            </div>
+
+            <button id="rollBtn" class="btn btn-outline-dark btn-lg game-btn" type="button">🎲 Spin the Dice</button>
+          </div>
+
+          <div class="mb-4">
+            <div class="fw-semibold mb-2 track-label">YOU</div>
+            <div class="track">
+              <span id="playerToken" class="token pos-0">
+                <img id="playerTokenImg" src="" alt="Player" class="token-img" />
+              </span>
+              <span class="finish-label">FINISH</span>
+            </div>
+          </div>
+
+          <div class="mb-4">
+            <div class="fw-semibold mb-2 track-label">RUDOLPH</div>
+            <div class="track">
+              <span id="rivalToken" class="token pos-0">
+                <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="token-img" />
+              </span>
+              <span class="finish-label">FINISH</span>
+            </div>
+          </div>
+
+          <hr class="wire-divider my-4" />
+
+          <div class="text-center">
+            <h3 class="h6 mb-3 event-title">Forest Event</h3>
+            <p id="eventText" class="mb-0 event-text">Ready.</p>
+          </div>
+
+          <div class="dice-area mt-4 text-center">
+            <img id="diceImg" class="dice-img" src="assets/images/dices/dice-1.png" alt="Dice" />
+            <div class="small mt-2 dice-info">
+              Roll:
+              <strong id="diceValueText">-</strong>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Screen: Win -->
+      <section id="screenWin" class="d-none">
+        <div class="board-box p-5 text-center mb-4">
+          <h2 class="h3 mb-4 result-title win-title">🎉 Red Nose Winner! 🎉</h2>
+          <div class="winner-images">
+            <img id="winnerReindeerImg" src="" alt="Winner" class="winner-img" />
+            <span class="plus-sign">+</span>
+            <div class="red-nose">🔴</div>
+          </div>
+          <div class="result-message mt-4">
+            <div class="win-line py-3 px-4 d-inline-block mb-3">You won Rudolph's Red Nose</div>
+            <p class="lead mb-0">You now lead Santa's sleigh!!</p>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <button id="playAgainBtn" class="btn btn-outline-dark btn-lg game-btn" type="button">🎮 Play Again</button>
+        </div>
+      </section>
+
+      <!-- Screen: Lose -->
+      <section id="screenLose" class="d-none">
+        <div class="board-box p-5 text-center mb-4">
+          <h2 class="h3 mb-4 result-title lose-title">Red Nose Winner</h2>
+          <div class="winner-images">
+            <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="winner-img" />
+          </div>
+          <div class="result-message mt-4">
+            <div class="win-line py-3 px-4 d-inline-block mb-3">Rudolph keeps the Red Nose</div>
+            <p class="lead mb-0">Try again to lead Santa's sleigh.</p>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <button id="playAgainBtn2" class="btn btn-outline-dark btn-lg game-btn" type="button">🎮 Play Again</button>
+        </div>
+      </section>
+    </main>
+
+    <!-- Settings modal -->
+    <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="modal-title fs-6" id="settingsTitle">Settings</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+
+          <div class="modal-body">
+            <div class="form-check form-switch mb-3">
+              <input class="form-check-input" type="checkbox" role="switch" id="soundToggle" />
+              <label class="form-check-label" for="soundToggle">Sound</label>
+            </div>
+
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" role="switch" id="animationsToggle" checked />
+              <label class="form-check-label" for="animationsToggle">Animations</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Main script -->
+    <script type="module" src="assets/js/script.js"></script>
+  </body>
 </html>
