style(game-board): add forest race environment with snow effect and transparency. Added forest background image to the game board container. Implemented CSS-only falling snow overlay for Christmas theme. Adjusted snow scale for better visibility without affecting layout.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       <!-- Screen: Game -->
       <section id="screenGame" class="d-none">
         <div class="board-box p-4 mb-4">
+          <div class="snow" aria-hidden="true"></div>
           <div class="text-center mb-4">
             <div class="player-info mb-3">
               <span class="player-label">Playing as:</span>
