Fix game screen border radius, add winner/loser reindeer animations, and remove duplicate CSS definitions

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <strong id="statsRudolphTurns" class="stat-value">-</strong>
               </div>
               <div class="stat-item">
-                <span class="stat-label">Max Dice:</span>
+                <span class="stat-label">Max Dice Roll:</span>
                 <strong id="statsRudolphMaxDice" class="stat-value">-</strong>
               </div>
             </div>
