--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Run, Rudolph, Run !</title>
     <meta name="description" content="Run, Rudolph, Run! - a quick reindeer dice game with fun and excitement for all ages." />
 
+    <!-- Favicons -->
+    <link rel="icon" href="./assets/images/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="./assets/images/favicon/site.webmanifest">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
