chore: add particles script to index.html, adjusted wording

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
 
           <!-- Center: Title -->
-          <div class="desktop-center fw-semibold text-gradient">Run, Rudolph, Run !</div>
+          <div class="desktop-center fw-semibold text-gradient">Rednose Rebels Presents!</div>
 
           <!-- Right: Effects toggle -->
           <div class="desktop-right">
@@ -87,7 +87,7 @@
 
         <div class="intro-spotify-wrapper mb-4">
           <div class="game-intro px-3">
-            <h2>Welcome to Run, Rudolph, Run!</h2>
+            <h2 class="h4 mb-3">How to Play</h2>
             <p>Choose a reindeer to compete against Rudolph.</p>
             <p>Roll the dice. The higher the number, the faster you move through the dark forest and closer to the front of the sleigh.</p>
             <p>Reach the finish line first to win the red nose and lead Santa's sleigh.</p>
@@ -175,8 +175,8 @@
               <strong id="diceValueText">-</strong>
             </div>
           </div>
-        <div class="board-box p-4 mb-4">
-          <div class="snow" aria-hidden="true"></div>
+        <div class=".board-box p-4 mb-4">
+          <div id="particles-js" aria-hidden="true"></div>
           <div class="text-center mb-4">
             <div class="player-info mb-3">
               <span class="player-label">Playing as:</span>
@@ -304,6 +304,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
     <!-- Main script -->
     <script type="module" src="assets/js/script.js"></script>
