chore: Again! added snow

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <!------------------------------------ Screen: Start of Game board ------------------------------------->
     <section id="screenGame" class="d-none">
       <hr class="wire-divider my-4" />
-      <div class="text-center">
+      <div id="particles-js"class="text-center">      <!-------- DO NOT CHANGE THIS LINE !!! -------------->
         <h3 class="h6 mb-3 event-title">Forest Event</h3>
         <p id="eventText" class="mb-0 event-text">Ready.</p>
       </div>
