--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/critical.css" />
+  <link 
+    rel="stylesheet" 
+    href="assets/css/style.css"
+    media="print"
+    onload="this.media='all'"
+    />
+  <noscript><link rel="stylesheet" href="assets/css/style.css"></noscript>
+
+    <!-- Image Preload -->
+    <link rel="preload" as="image" href="assets/images/reindeer/forest-background.jpg" />
 </head>
 
 <body class="bg-light">
@@ -81,18 +91,7 @@
             <div class="col-md-4 text-center my-3 my-md-0">
               <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="rudolph-img img-fluid" />
             </div>
-
-            <!-- Spotify Player -->
-            <div class="col-md-4 text-center text-md-end">
-              <div class="spotify-player">
-                <iframe id="spotifyPlayer" class="spotify-embed"
-                  src="https://open.spotify.com/embed/track/2pnPe4pJtq7689i5ydzvJJ?utm_source=generator" width="100%"
-                  height="152" frameborder="0" allowfullscreen=""
-                  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                  loading="lazy"></iframe>
-              </div>
             </div>
-          </div>
           <!-- Rules Row -->
           <div class="row">
             <div class="col-12 text-center rules-list">
