changed css and wording in HTML to the intro sections

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
   <main class="container pb-4">
     <!-- Screen: Start -->
     <section id="screenStart" class="d-block">
-
       <div class="row mb-4">
         <div class="hero-box p-4">
-          <div class="row align-items-center mb-4">
+          <div class="row align-items-center">
             <!-- Welcome Text -->
             <div class="col-md-4 text-center text-md-start">
               <div class="game-intro">
                 <h2>Welcome to Run, Rudolph, Run!</h2>
+                <br
                 <p>Choose a reindeer to compete against Rudolph.</p>
               </div>
             </div>
@@ -91,17 +91,17 @@
             <div class="col-md-4 text-center my-3 my-md-0">
               <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="rudolph-img img-fluid" />
             </div>
-            </div>
+            
           <!-- Rules Row -->
-          <div class="row">
-            <div class="col-12 text-center rules-list">
-              <ol>
+            <div class="col-md-4 text-center rules-list">
+              <h2 class="game-intro">Rules of the game!</h2>
+              <ol class="text-start d-inline-block">
                 <li>Roll the dice. The higher the number, the faster you move.</li>
                 <li>Reach the finish line first to win the red nose.</li>
                 <li>Help Santa Claus lead his sleigh!</li>
               </ol>
             </div>
-          </div>
+          
         </div>
       </div> <!-- End of row -->
 
