--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
 
     <!-- Screen: Win -->
     <section id="screenWin" class="d-none">
-      <div class="board-box p-5 text-center mb-4">
-        <h2 class="h3 mb-4 result-title win-title">🎉 You Win the Red Nose! 🎉</h2>
+      <div 
+        class="p-5 text-center mb-4"
+        style="background-color: burlywood; border-radius: 20px; overflow: hidden;">
+        <h2 class="h3 mb-4 result-title win-title">You Win the Red Nose!</h2>
         <div class="winner-composition">
           <img id="winnerReindeerImg" src="" alt="Winner" class="winner-img" />
           <i class="fas fa-arrow-right-long arrow-icon" aria-hidden="true"></i>
@@ -259,8 +261,16 @@
 
     <!-- Screen: Lose -->
     <section id="screenLose" class="d-none">
-      <div class="board-box p-5 text-center mb-4">
-        <h2 class="h3 mb-4 result-title lose-title">Rudolph Wins the Red Nose</h2>
+      <div 
+        class="p-5 text-center mb-4"
+        style="background-color: #5f7d8c; border-radius: 20px; overflow: hidden;"
+        >
+        <h2 
+          class="h3 mb-4 result-title lose-title"
+          style="color:#3a1f5c;"
+        >
+          Rudolph Keeps the Red Nose
+        </h2>
         <div class="winner-composition">
           <img src="assets/images/reindeer/rudolph.jpg" alt="Rudolph" class="winner-img" />
           <i class="fas fa-arrow-right-long arrow-icon" aria-hidden="true"></i>
