changed game board style, change message box to red and more festive

--- a/index.html
+++ b/index.html
@@ -110,15 +110,16 @@
             <img src="assets/images/reindeer/dasher.png" alt="Dasher" class="reindeer-img" />
             <span class="reindeer-name">Dasher</span>
           </button>
+
           <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Dancer">
             <img src="assets/images/reindeer/dancer.png" alt="Dancer" class="reindeer-img" />
             <span class="reindeer-name">Dancer</span>
           </button>
+
           <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Prancer">
             <img src="assets/images/reindeer/prancer.png" alt="Prancer" class="reindeer-img" />
             <span class="reindeer-name">Prancer</span>
           </button>
-
         
           <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Vixen">
             <img src="assets/images/reindeer/vixen.png" alt="Vixen" class="reindeer-img" />
@@ -133,10 +134,12 @@
             <img src="assets/images/reindeer/cupid.png" alt="Cupid" class="reindeer-img" />
             <span class="reindeer-name">Cupid</span>
           </button>
+
           <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Donner">
             <img src="assets/images/reindeer/donner.png" alt="Donner" class="reindeer-img" />
             <span class="reindeer-name">Donner</span>
           </button>
+
           <button class="btn btn-outline-dark btn-sm reindeer-btn" type="button" data-reindeer="Blitzen">
             <img src="assets/images/reindeer/blitzen.png" alt="Blitzen" class="reindeer-img" />
             <span class="reindeer-name">Blitzen</span>
@@ -180,7 +183,7 @@
                 </div>
               </div>
               <!-- Spin dice button -->
-              <button id="rollBtn" class="image-btn game-btn" type="button">
+              <button id="rollBtn" class=" image-btn" type="button">
                 <img src="assets/images/extra/spin.png" alt="Spin the dice" class="spin-btn-img" />
               </button>
             </div>
