chore: fixed missing symbol

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- Right: Effects toggle -->
         <div class="desktop-right">
-          <button id="effectsToggleBtn" type="button" class="btn btn-sm btn-success control-toggle">✨ EFFECTS
+          <button id="effectsToggleBtn" type="button" class="btn btn-sm btn-success control-toggle">EFFECTS
             ON</button>
         </div>
       </div>
@@ -82,7 +82,7 @@
             <div class="col-md-4 text-center text-md-start">
               <div class="game-intro">
                 <h2>Welcome to Run, Rudolph, Run!</h2>
-                <br
+                <br>
                 <p>Choose a reindeer to compete against Rudolph.</p>
               </div>
             </div>
