chore: adjusting colors, better clarity.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <section id="screenLose" class="d-none">
       <div 
         class="p-5 text-center mb-4"
-        style="background-color: #5f7d8c; border-radius: 20px; overflow: hidden;"
+        style="background-color: lightcoral; border-radius: 20px; overflow: hidden;"
         >
         <h2 
           class="h3 mb-4 result-title lose-title"
