--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container text-center py-3">
+      <small class="text-muted">
+        &copy; 2025 Rednose Rebels. All rights reserved.
+      </small>
+      <p> Creators: Monica,  Kat,  Dario, Sascha.</p>
+      <p>Merry Christmas!</p>
+    </div>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
